Single Dockerfile in starter